--- a/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/04-mixins/mixins.twig
@@ -361,7 +361,7 @@
 		<li class="include-tag">@include transTwoAll;</li>
 		<li>Creates two-hundreths of s second transtion of all properties and ease.</li>
 		<li class="similar">Similar:</li>
-		<li class="include-tag">@include transThreeAll;</li>
+		<li class="include-tag">@include transAll(.3s);</li>
 	</ul>
 </div>
 
