--- a/web/themes/oc_patterns/components/_patterns/01-atoms/04-images/icons/_icons.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/04-images/icons/_icons.scss
@@ -19,7 +19,7 @@ a.icon{
 	&:hover,&:focus{
 		color: $hoverLink;
 		//from 02-animations.scss
-		@include transThreeAll;
+		@include transAll(.3s);
 	}
 	svg{
 		width: inherit;
