--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
@@ -15,13 +15,13 @@
 		color: $white;
 		&:hover,&:focus{
 			background: $hoverLink;
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 		&#edit-reset{
 			background: $black;
 			&:hover{
 				background: $hoverLink;
-				@include transThreeAll;
+				@include transAll(.3s);
 			}
 		}
 	}
