--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -90,7 +90,7 @@
 	&:hover,&:focus{
 		background: $buttonBackHover;
 		//from 02-animations.scss
-		@include transThreeAll;
+		@include transAll(.3s);
 		color: $white;
 	}
 }
