--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
@@ -22,7 +22,7 @@
 		a{
 			padding-right: .25em;
 			//from 02-animations.scss
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 		&:not(:last-of-type){
 			&:after{
