--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/button/_button.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/button/_button.scss
@@ -14,7 +14,7 @@
 
 	//links		
 	.button-widget{
-		@include transThreeAll;
+		@include transAll(.3s);
 		@include button;
 		padding: .75em 2em;
 		min-width: 200px;
