--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/social-media/_social-media.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/social-media/_social-media.scss
@@ -19,7 +19,7 @@
 			color: $link;
 			&:hover,&:focus{
 				color: $hoverLink;
-				@include transThreeAll;
+				@include transAll(.3s);
 			}
 		}
 	}
