--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/text/_text.scss
@@ -10,7 +10,7 @@
 	.two-column{
 		@include tab{
 			.field-oc-long-text{
-				@include columns(2, 2em);
+				@include cssColumns(2, 2em);
 			}
 		}
 	}
