--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/profile/_profile.scss
@@ -59,7 +59,7 @@
 	.field-email,.field-phone{
 		a{
 			//from 03-animations.scss
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 	}
 
