--- a/web/themes/oc_patterns/components/_patterns/05-sitewide/01-oc-base/objects/_base_blocks.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-sitewide/01-oc-base/objects/_base_blocks.scss
@@ -11,7 +11,7 @@
 			//from 01-mixins.scss 
 			@include opacity(.7);
 			//from 02-animations.scss 
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 	}
 }
