--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -40,6 +40,8 @@ html,code{
 	font-family: $bodyfont;
 	@include baseFontSize;
 	line-height: 1.4;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 body {
