--- a/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
@@ -26,7 +26,7 @@
 	&:hover,&:focus {
 		background-color: $midGrey;
 		//from 02-animations.scss
-		@include transThreeAll;
+		@include transAll(.3s);
 	}
 }
 
@@ -41,7 +41,7 @@
 		color: $black;
 		border-color: $outlineColor;
 		//from 02-animations.scss
-		@include transThreeAll;
+		@include transAll(.3s);
 	}
 }
 
