--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
@@ -25,7 +25,7 @@
 				color: $gold;
 				&:hover,&:focus{
 					color: $transWhite;
-					@include transThreeAll;
+					@include transAll(.3s);
 				}
 			}
 			&:not(:first-child){
