--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/_widgets.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/_widgets.scss
@@ -36,7 +36,7 @@
 		&:hover,&:focus{
 			color: $black;
 			//from 02-animations.scss
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 	}
 	.widget-title > a{
@@ -44,7 +44,7 @@
 		&:hover,&:focus{
 			color: $transBlack;
 			//from 02-animations.scss
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 	}
 	figcaption {
@@ -67,7 +67,7 @@
 		&:hover,&:focus{
 			color: $white;
 			//from 02-animations.scss
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 	}
 	.widget-title > a{
@@ -75,7 +75,7 @@
 		&:hover,&:focus{
 			color: $transWhite;
 			//from 02-animations.scss
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 	}
 	figcaption {
