--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/accordion/_accordion.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/accordion/_accordion.scss
@@ -75,7 +75,7 @@
 			background: $midGrey;
 			color: $white;
 			//from animations.scss
-			@include transThreeAll;
+			@include transAll(.3s);
 		}
 	}
 
