--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/blog-post/_blog-post.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/blog-post/_blog-post.scss
@@ -107,7 +107,7 @@
 				.info{
 					a:hover,&:focus{
 						//from 02-animations.scss
-						@include transThreeAll;
+						@include transAll(.3s);
 					}
 				}
 				@include smallTab{
@@ -143,7 +143,7 @@
 					//from text.scss
 					@include smaller;
 					//from 02-animations.scss
-					@include transThreeAll;
+					@include transAll(.3s);
 				}
 			}
 		}//end tags
