--- a/web/themes/oc_patterns/templates/zzz-custom/layout/nodes/field--node--title--blog.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/layout/nodes/field--node--title--blog.html.twig
@@ -24,11 +24,7 @@
 
 <div class="text-wrapper">
 	<h1{{ attributes }}>
-		{% if element.0['#context'].value|split(' ')|length > 1 %}
-			<h1>{{ element.0['#context'].value|split(' ')|slice(0,-1)|join(' ') }}&nbsp;{{ element.0['#context'].value|split(' ')|last }}</h1>
-		{% else %}
-			<h1>{{ element.0['#context'].value }}</h1>
-		{% endif %}
+		{{ element.0['#context'].value }}
 	</h1>
 	<div class="metatext">
 		<span class="date">{{ date }}</span>
