--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/accordion/_accordion.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/accordion/_accordion.scss
@@ -86,7 +86,7 @@
 		overflow: hidden;
 		background: $offWhite;
 		padding: 0 2em;
-		@include transTwoAll;	
+		@include transAll(.3);	
 	}
 
 	//active accordion
