--- a/web/modules/custom/oc_custom/css/custom-global.css
+++ b/web/modules/custom/oc_custom/css/custom-global.css
@@ -103,3 +103,12 @@ input[value="Add new media"],input[value="Add existing media"]{
 .toolbar-tray-horizontal .menu-item:hover{
 	background-color: #f5f5f2 !important;
 }
+
+
+/* WEBFORMS HOTFIX FOR BROKEN CKE
+------------------------------ */
+.webform-form textarea.form-textarea,.webform-ui-element-form textarea.form-textarea{
+  visibility: visible !important;
+}
+
+
