--- a/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--book.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/blocks/menus/block--book.html.twig
@@ -25,29 +25,19 @@
  * @see template_preprocess_block()
  */
 #}
-{%
-	set classes = [
-		'block',
-		'block-' ~ plugin_id|clean_class,
-	]
-%}
-
-
-<div{{ attributes.addClass(classes) }}>
-	{{ title_prefix }}
-	{% if label %}
-		<h2 class="block-title">
-			{% for item in content['#items'] %}
-				{% if loop.first %}
-				<a href="/node/{{ item.original_link.pid }}">
-				{% endif %}
-			{% endfor %}
-			{{ label }}
-			</a>
-		</h2>
-	{% endif %}
-	{{ title_suffix }}
-	{% block content %}
+{% extends 'block.html.twig' %}
+	{% block blockContent %}
+		{% if label %}
+			<h2 class="block-title">
+				{% for item in content['#items'] %}
+					{% if loop.first %}
+					<a href="/node/{{ item.original_link.pid }}">
+					{% endif %}
+				{% endfor %}
+				{{ label }}
+				</a>
+			</h2>
+		{% endif %}
 		{{ content }}
 	{% endblock %}
 </div>
