--- a/web/themes/oc_patterns/templates/zzz-custom/layout/html.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/layout/html.html.twig
@@ -26,3 +26,6 @@
 
 {% extends "@sitewide/_html.twig" %}
 
+{% block headInsert %}
+	{# placeholder for any site or page specific <head> additions #}
+{% endblock %}
