--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/block-placer/_block-placer.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/block-placer/_block-placer.scss
@@ -2,8 +2,11 @@
    BLOCK PLACER WIDGET
 ================ */
 .paragraph--type--block-placer{
-	.wrapper{
-		max-width: $maxWidth !important;
-	}	
+	.field-block{
+		.field.body{
+			max-width: $maxWidthText;
+			@include auto;
+		}
+	}
 }//end paragraph-block-placer
 
