--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/events-category/_events-category.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/events-category/_events-category.scss
@@ -3,23 +3,12 @@
 ================== */
 
 .paragraph--type--event-by-category{
+	max-width: $maxWidthText;
+	@include auto;
 
 	//add a bit more space before start of view if there is a title
 	h3.widget-title{
 		margin-bottom: 1.5em;
-	}
-
-	.view-content{
-		@include safeFlex(row,wrap,null,null);
-	}
-
-	//override normal 250px image width to allow shrinkage when in smaller spaces
-	.views-row.horizontal{
-		.card-image{
-			@include tab{
-				@include safeFlexSize(0,0,30%);
-			}
-		}
 	}
 	
 }//end news by category
