--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/form/_form.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/form/_form.scss
@@ -3,6 +3,9 @@
 ================ */
 
 .paragraph--type--form{
+	max-width: $maxWidthText;
+	@include auto;
+	
 	.field-oc-long-text{
 		margin-bottom: 1em;
 	}
