--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/links-files/_links-files.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/links-files/_links-files.scss
@@ -3,16 +3,17 @@
 ================== */
 
 .paragraph--type--links-files{
+	max-width: $maxWidthText;
+	@include auto;
 	//set margins for links and files lists
-	.field-oc-link-multi,.field-oc-file-multi{
+	.links-files{
 		margin-top: 1em;
+		@include smallTab{
+			@include cssColumns(2,2em);
+		}
 		& > div{
 			margin-bottom: .25em;
 		}
-	}
-	//remove top margin to combine links and files lists
-	.field-oc-link-multi + .field-oc-file-multi{
-		margin-top: 0;
 	}
 }//end links-files widget
 
