--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/text/_text.scss
@@ -3,8 +3,7 @@
 ================= */
 
 .paragraph--type--text{
-	.field-oc-long-text{
-		margin-bottom: .5em;
-	}
+	max-width: $maxWidthText;
+	@include auto;
 }//end links-files widget
 
