Widget anchors and back to top global

--- a/web/themes/oc_patterns/components/_patterns/00-base/_03-background-sizes.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_03-background-sizes.scss
@@ -119,6 +119,15 @@ $accordiontoggle: 20px;
 }
 
 
+///used in WIDGETS.SCSS
+$backAnchor: 30px;
+@mixin backAnchorArrow{
+	@include sprite-back-to-top-arrow;
+	@include backgroundSize($columns * $backAnchor,$rows * $backAnchor);
+}
+
+
+
 /* PATTERN LAB ONLY
 ---------------- */
 /// used in BLOG-POST.SCSS
