--- a/web/themes/oc_patterns/templates/zzz-custom/layout/html.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/layout/html.html.twig
@@ -29,3 +29,7 @@
 {% block headInsert %}
 	{# placeholder for any site or page specific <head> additions #}
 {% endblock %}
+
+{% block bottomInsert %}
+	<div class="back-anchor"><a href="#">Back to Table of Contents</a></div>
+{% endblock %}
