--- a/web/themes/oc_patterns/components/_patterns/05-sitewide/00-global-styles/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-sitewide/00-global-styles/_global-styles.scss
@@ -45,7 +45,38 @@ p{
 	overflow: scroll;
 }
 
-
+/* BACK TO TOP
+----------------- */
+//back to table of contents option
+.back-anchor{
+	display: none;
+	position: fixed;
+	bottom: 3%;
+	right: 3%;
+	box-shadow: 3px 3px 5px rgba(35,35,35, 0.35);
+	z-index: 9999;
+	border-radius: 50%;
+	a{
+		display: block;
+		width: 50px;
+		height: 50px;
+		background: rgba(35,35,35,0.85);
+		border-radius: 50%;
+		text-indent: -300vw;
+		position: relative;
+		&:after{
+			content: '';
+			display: block;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			@include translate(-50%,-50%);
+			width: 30px;
+			height: 30px;
+			@include backAnchorArrow;
+		}
+	}
+}//end back anchor
 
 /*  FILE ICONS
 --------------- */
