Align date formats

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/call-to-action/_call_to_action.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/call-to-action/_call_to_action.scss
@@ -33,6 +33,7 @@
 	
 
 	//when has slidin animation (call_to_action.js)
+	/*
 	.wrapper{
 		overflow: hidden;
 		& > *{
@@ -42,6 +43,7 @@
 			@include animation('slideInUp 1s 1 ease-out forwards');
 		}
 	}
+	*/
 
 }//end cta
 
