--- a/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/news-category/_news-category.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/02-widgets/news-category/_news-category.scss
@@ -10,6 +10,11 @@
 	h3.widget-title{
 		margin-bottom: 1.5em;
 	}
+
+	.date{
+		@include textDate;
+		@include spacer(.5);
+	}
 	
 }//end news by category
 
