--- a/web/themes/oc_patterns/components/_patterns/03-organisms/04-site/01-site-header/_site-header.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/04-site/01-site-header/_site-header.scss
@@ -3,7 +3,7 @@
 =================== */
 
 .layout-container > header {
-	background: $gold;
+	background: $offWhite;
 	& > div{
 		padding: 10px 20px;
 		@include paddedContent;
