Remove page manager, update cke styles

--- a/web/themes/oc_patterns/components/_patterns/03-organisms/04-site/02-site-footer/_site-footer.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/04-site/02-site-footer/_site-footer.scss
@@ -37,6 +37,7 @@ footer {
 		}
 
 		//styling when fixed
+		/*
 		&.isFixed{
 			@include tab{
 				border-top: 1px solid $offWhite;
@@ -69,7 +70,7 @@ footer {
 				}
 			}//end tab
 		}//end fixed
-
+		*/
 	}//end footer-inner
 
 }//end footer
