--- a/web/themes/oc_patterns/components/_patterns/05-sitewide/01-oc-base/media/_media.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-sitewide/01-oc-base/media/_media.scss
@@ -10,16 +10,37 @@ img{
 
 //constrain images with smaller sizes (commonly embedded)
 .view-modemediasmall,.view-mode-small{
-	max-width: 300px;
+	width: 300px;
+	max-width: 100%;
+	&.left,&.right{
+		@include tab{
+			max-width: 50%;
+		}
+	}
 }
 .view-modemediamedium,.view-mode-medium{
 	max-width: 500px;
+	&.left,&.right{
+		@include tab{
+			max-width: 50%;
+		}
+	}
 }
 .view-modemediasquare,.view-mode-square{
 	max-width: 350px;
+	&.left,&.right{
+		@include tab{
+			max-width: 50%;
+		}
+	}
 }
 .view-modemedialarge,.view-mode-large{
 	max-width: 800px;
+	&.left,&.right{
+		@include tab{
+			max-width: 50%;
+		}
+	}
 }
 
 /* MEDIA IN WYSIWYG 
@@ -37,11 +58,13 @@ img{
 	&.left:not(.has-video){
 		@include tab {
 			float: left;
-			margin-right: 2em;
+			margin-right: 1em;
 		}
 	}
 	&.center{
 		@include auto;
 	}
-  
+	.player .vp-player-layout{
+		width: 100% !important;
+	}
 }//end oc-media
