--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/footer-menu/_footer-menu.scss
@@ -15,7 +15,7 @@
 		width: 70%;
 		text-align: right;
 	}
-	ul{
+	ul:not(.contextual-links){
 		@include listReset;
 		@include safeFlex(row,wrap,null,null);
 		li{
