--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-page-menu/_page-menu.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/02-page-menu/_page-menu.scss
@@ -9,11 +9,11 @@
 	-------------- */ 
 
 	//top level
-	& > ul{
+	& > ul:not(.contextual-links){
 		@include listReset;
 
 		//child menus
-		ul{
+		ul:not(.contextual-links){
 			margin: .25em 0;
 			display: none;
 			padding-left: 12px;
@@ -67,7 +67,7 @@
 					}
 				}
 				//show next menu level
-				& > ul{
+				& > ul:not(.contextual-links){
 					display: block;
 					height: 0;
 					@include animation(slideDown .2s 1 forwards);
@@ -86,66 +86,6 @@
 		color: $black;
 	}
 
-
-	/* MOBILE & KERMIT PAGE MENU
-	--------------------- */
-
-	//select2 mobile jump menu
-	.select2-container{
-		width: 100% !important;
-		max-width: 400px;
-		.select2-selection__rendered{
-			background-color: $link;
-			color: $white;
-			border: none;
-		}
-		.select2-selection--single{
-			height: 36px; 
-			border: none;
-			.select2-selection__arrow{
-				height: 20px;
-				width: 20px;
-				top: 8px;
-				right: 8px;         
-				@include sideDropArrow;
-			}
-		}
-		//icons when open, focused
-		&.select2-container--open,&:focus{
-			.select2-selection--single .select2-selection__arrow{
-				@include sideDropArrowActive;
-			}
-		}
-	}
-
-	//kermit specific placement
-	.kermit &{
-		& > ul{
-			display: none;
-		}
-		@include tab{
-			position: absolute;
-			bottom: 5px;
-			right: 0;
-		}
-		@include breakpoint (1240px){
-			@include calc(right, "50vw - 620px");
-		}
-		h2.block-title{
-			display: none;
-		}
-		.select2-container{
-			max-width: 300px;
-			@include tab{
-				width: 300px !important;
-			}
-		}
-	}
-	
-	//when in any top region
-	.block-region-top &{
-		padding: 0 20px;
-	}
 	
 }//end .block--system-menu.page-menu nav
 
