--- a/web/themes/oc_patterns/components/css/cke.css
+++ b/web/themes/oc_patterns/components/css/cke.css
@@ -1,57 +1,93 @@
 /*WYSIWYG for editors*/
 html {
-  font-size: 16px;
-  line-height: 24px;
-  font-family: Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	line-height: 24px;
+	font-family: Helvetica, Arial, sans-serif;
 }
 
 .cke_widget_element img{
-  max-width: 100%;
-  height: auto;
+	max-width: 100%;
+	height: auto;
 }
 .cke_widget_element[data-align="right"]  {
-  float: right;
-  margin:0 0 20px 20px;
-  clear:both;
+	float: right;
+	margin:0 0 20px 20px;
+	clear:both;
 }
 
 .cke_widget_element[data-align="left"]  {
-  float: left;
-  margin:0 20px 20px 0;
-  clear:both;
+	float: left;
+	margin:0 20px 20px 0;
+	clear:both;
 }
 .cke_widget_element[data-align="center"]  {
-  margin: 2em auto 1em;
-  display: inline;
-  text-align: center;
-  clear:both;
+	margin: 2em auto 1em;
+	display: inline;
+	text-align: center;
+	clear:both;
+}
+
+.cke_widget_element[data-entity-embed-display="view_mode:media.small"]{
+	width: 300px;
+	max-width: 50%;
+}
+.cke_widget_element[data-entity-embed-display="view_mode:media.medium"]{
+	width: 500px;
+}
+.cke_widget_element[data-entity-embed-display="view_mode:media.large"]{
+	width: 800px;
 }
 
 span.highlight{
-  background: #fcd916;
+	background: #fcd916;
 }
 
 div.warning {
-  border: 2px solid #dd241b;
-  color: #dd241b;
-  padding: .5em 1em;
-  margin-bottom: 1.5em;
-  text-align: center;
+	border: 2px solid #dd241b;
+	color: #dd241b;
+	padding: .5em 1em;
+	margin-bottom: 1.5em;
+	text-align: center;
 }
 small{
-  font-size: 80%;
+	font-size: 80%;
 }
 
 table th, table td{
-  min-width: 40px;
-  padding: 2px 6px;
+	min-width: 40px;
+	padding: 2px 6px;
 }
 
 .field--name-field-caption{
-  font-style: italic;
-  font-size: 13px;
-  text-align: center;
-  color: #666;
+	font-style: italic;
+	font-size: 13px;
+	text-align: center;
+	color: #666;
 }
+
+h1{
+	font-size: 60px;
+}
+
+h2{
+	font-size: 32px;
+}
+
+h3{
+	font-size: 26px;
+}
+
+h4{
+	font-size: 22px;
+}
+
+h5{
+	font-size: 20px;
+}
+
+h6{
+	font-size: 18px;
+}
+
 
 
